División de parsers

--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
         <script type="text/javascript" src="js/conwet/ui/StyledOption.js"></script>
         <script type="text/javascript" src="js/conwet/ui/StyledSelect.js"></script>
         <script type="text/javascript" src="js/conwet/ui/UIUtils.js"></script>
+        
+        <!-- Parser -->
+        <script type="text/javascript" src="js/conwet/parser/ConfigParser.js"></script>
+        <script type="text/javascript" src="js/conwet/parser/ParseUtils.js"></script>
 
         <!-- Gadget -->
         <script type="text/javascript" src="js/conwet/Gadget.js"></script>
