--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <script type="text/javascript" src="js/conwet/ui/UIUtils.js"></script>
         
         <!-- Parser -->
+        <script type="text/javascript" src="js/conwet/parser/AutoParser.js"></script>
         <script type="text/javascript" src="js/conwet/parser/ConfigParser.js"></script>
         <script type="text/javascript" src="js/conwet/parser/ParseUtils.js"></script>
 
